src/objects/C501_Federal_Poverty_Level__mdt.object
<CustomObject>
    <description>Holds values used to calculate federal povery levels</description>
    <fields>
        <fullName>C501_Base_Level_AK__c</fullName>
        <description>Baseline for one person in Alaska - in 2019, it&apos;s $15,600</description>
        <inlineHelpText>Federal poverty level for one person in Alaska - in 2019, it&apos;s $15,600</inlineHelpText>
        <label>Base Level - AK</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_Base_Level_HI__c</fullName>
        <description>Baseline for one person in Hawaii - in 2019, it&apos;s $14,380</description>
        <inlineHelpText>Federal poverty level for one person in Hawaii - in 2019, it&apos;s $14,380</inlineHelpText>
        <label>Base Level - HI</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_Base_Level_Lower_48__c</fullName>
        <description>Baseline for one person in the lower 48 states and DC - in 2019, it&apos;s $12,490</description>
        <inlineHelpText>Federal poverty level for one person for the lower 48 states and DC - in 2019, it&apos;s $12,490</inlineHelpText>
        <label>Base Level - Lower 48</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_Effective_Date__c</fullName>
        <description>Date on which these values take effect - should be 1/1/[YYYY]</description>
        <inlineHelpText>Date on which these values take effect - should be 1/1/[YYYY]</inlineHelpText>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>C501_Increment_AK__c</fullName>
        <description>Incremental amount added to the base line for each additional HH member, in AK - in 2019, it&apos;s $5,530</description>
        <inlineHelpText>Incremental amount added to the base line for each additional HH member, in AK - in 2019, it&apos;s $5,530</inlineHelpText>
        <label>Increment - AK</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_Increment_HI__c</fullName>
        <description>Incremental amount added to the base line for each additional HH member, in HI - in 2019, it&apos;s $5,080</description>
        <inlineHelpText>Incremental amount added to the base line for each additional HH member, in HI - in 2019, it&apos;s $5,080</inlineHelpText>
        <label>Increment - HI</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>C501_Increment_Lower_48__c</fullName>
        <description>Incremental amount added to the base line for each additional HH member, in the lower 48 states and DC - in 2019, it&apos;s $4,420</description>
        <inlineHelpText>Incremental amount added to the base line for each additional HH member, in the lower 48 states and DC - in 2019, it&apos;s $4,420</inlineHelpText>
        <label>Increment - Lower 48</label>
        <precision>6</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Federal Poverty Level</label>
    <pluralLabel>Federal Poverty Levels</pluralLabel>
</CustomObject>